fix: adjust text overflow

--- a/singolo1.css
+++ b/singolo1.css
@@ -240,6 +240,7 @@ body {
 #service-content {
     margin: 0;
     padding-top: 18px;
+    height: 55px;
     font-size: 1.1rem;
     font-weight: 300;
     line-height: 30px;
